# IDX-Debate-Engine

./: # Full System Examination Report.md  .env.example  .gitignore  AGENTS.md  AUDIT_CHECKLIST.md  AUDIT_LAPORAN.md  AUDIT_RISK_VALUATION.md  CALCULATION_AUDIT.md  CALCULATION_AUDIT_TASKS.md  PROMPT_MIGRATION.md  README.md  REMEDIATION_BACKLOG.md  STRATEGIC_ALIGNMENT_AUDIT.md  build_sector_cache.py  conftest.py  install.ps1  main.py  orchestrator.py  pyproject.toml  run_api.py  run_debate.py  run_quant_filter.py  tmp_debate.txt
app/: __init__.py
builders/: builder_interface.py  database_builder.py  excel.py  sentiment_lexicon.py  spreadsheet.py
config/: agents.example.yaml  forecast_blocklist.json  rr_tiers.yaml
core/: adaptive_planner.py  agent_eval_harness.py  artifact_validator.py  backtest_memory.py  backtest_outcome_evaluator.py  budget.py  candidate_intake.py  comparison_reporter.py  dependency_validator.py  execution_ledger.py  execution_regime.py  failure_taxonomy.py  fundamental_factors.py  handoff_envelope.py  historical_scorer.py  idx_market_params.py  observation_store.py  ops_telemetry.py  portfolio_guard.py  portfolio_optimizer.py  prompt_pack_linter.py  provider_health.py  regime.py  regime_gate.py  regime_hmm.py  report_consistency.py  risk_governor.py  settings.py  tool_registry.py  trade_envelope.py  verification_runner.py
db/: __init__.py  idx-fundamental.db-shm  session.py
docs/: architecture_decision_map.md  artifacts.md  audit_report_2026-06-11.md  backtest_reporting_standard.md  de_overengineering_audit_2026-07-03.md  de_overengineering_execution_checklist_2026-07-03.md  decision_semantics.md  pipeline_agent_audit_2026-05-23.md  reproducible_runs.md
examples/: sample_TOP_3_SWING_TRADES.md  sample_full_batch_results.json
idx_fundamental.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
output/: TOP_3_SWING_TRADES.md  comparison_report.json  comparison_report.md  full_batch_results.json  sector_cache.json  top10_candidates.json
portfolio-web/: index.html  script.js  style.css
providers/: anthropic_adapter.py  codex_adapter.py  codex_responses_llm.py  gemini.py  idx.py  idx_broker_summary.py  idx_foreign_flow.py  llm.py  llm_factory.py  oauth_manager.py  (+3 more)
(+605 files in other folders)
