[project]
name = "idx-fundamental"
version = "0.1.0"
description = "IDX Composite Fundamental Analysis"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "MIT" }
authors = [{ name = "Naufal Ibrahim Hajid" }]
dependencies = [
    "undetected-chromedriver>=3.5.5",
    "beautifulsoup4>=4.12.3",
    "loguru>=0.7.2",
    "requests>=2.32.0",
    "babel>=2.15.0",
    "google-api-python-client>=2.137.0",
    "google-auth>=2.30.0",
    "python-dotenv>=1.0.1",
    "openpyxl>=3.1.5",
    "phidata>=2.4.42",
    "ollama>=0.3.3",
    "sqlalchemy>=2.0.35",
    "setuptools>=80.9.0",
    "aiosqlite>=0.21.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.4.0",
    "langchain-google-genai>=4.0.0",
    "langchain-core>=0.3.0",
    "tenacity>=9.0.0",
    "pandas>=2.2.0",
    "yfinance>=0.2.40",
    "selenium>=4.25.0",
    "requests-cache>=1.2.1",
    "requests-ratelimiter>=0.7.0",
    "pyrate-limiter>=3.6.0",
    "numpy>=1.26.0",
    "pytz>=2024.2",
    "rich>=15.0.0",
    "typer>=0.21.1",
    "typing-extensions>=4.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "cachetools>=5.3.0",
    "aiofiles>=25.1.0",
    "langchain-anthropic>=1.4.4",
    "langchain-openai>=1.2.2",
]

[project.scripts]
idx = "app.cli.main:app"

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "build_sector_cache",
    "main",
    "orchestrator",
    "run_api",
    "run_debate",
    "run_quant_filter",
]

[tool.setuptools.packages.find]
include = [
    "app*",
    "builders*",
    "core*",
    "db*",
    "providers*",
    "repositories*",
    "schemas*",
    "services*",
    "utils*",
]
exclude = ["scratch*", "tests*"]
namespaces = true

[project.optional-dependencies]
crawler = [
    "crawl4ai>=0.4.0",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
extend-exclude = ["scratch"]
